--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,26 @@
   <groupId>com.weather-apis.student</groupId>
   <artifactId>weather-apis</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+   <java.version>1.8</java.version>
+   <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <dependencies>
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
-  		<version>4.12</version>
+  		<version>[4.13.1,)</version>
   	</dependency>
   	<dependency>
   		<groupId>com.datastax.cassandra</groupId>
   		<artifactId>cassandra-driver-core</artifactId>
-  		<version>3.1.0</version>
+  		<version>[3.1.0,)</version>
   	</dependency>
   	<dependency>
   		<groupId>org.cassandraunit</groupId>
   		<artifactId>cassandra-unit</artifactId>
-  		<version>3.0.0.1</version>
+  		<version>[3.0.0.1,)</version>
   	</dependency>
   </dependencies>
 </project>
